@@ -4,6 +4,8 @@ NEXT
         [ENHANCEMENTS]
         The requirement for Perl 5.10 has been reverted to 5.6.1.
 
+        Add assert_keys_are() for asserting an exact list of keys.
+
 1.20    Fri Aug  9 10:10:06 CDT 2019
         [ENHANCEMENTS]
         Add assert_datetime() for asserting DateTime objects.
